# openapi_spec.yml
@@ -1,20 +1,33 @@
 openapi: 3.0.0
 info:
-  version: 'v0.0.0'
-  title: 'IPFS Pinning Service'
-  description: 'This is the IPFS Pinning Service API. It attempts to be an implementation-agnostic API.'
+  title: IPFS Pinning Service API
+  description: "This is the IPFS Pinning Service API. It attempts to be an  implementation-agnostic\
+    \ API designed to be implemented by Pinning Service  Providers. \n\nThis specification\
+    \ does **NOT** define the IPFS pinning API.\n\nGitHub discussion around this API\
+    \ can be found in [ipfs/notes](https://github.com/ipfs/notes/issues/378).\n\n\n\
+    **Critical Notice**\n\nTo allow backend systems behind the API to associate pins\
+    \ with a particular  user, the API requires that a JSON Web Token is passed with\
+    \ requests that  contains a `sub` claim (as specified by  [OpenIDConnect Standard\
+    \ Claims](https://openid.net/specs/openid-connect-core-1_0.html#StandardClaims))\
+    \ that represents the user's identity within the backend system, so as to  associate\
+    \ the user with their pins. This allows the backend system to use  the identity\
+    \ as a form of reference counting on pins, therefore only  removing pins once\
+    \ no other users have it pinned."
+  version: 0.0.1
 servers:
-  - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/api/v0
+- url: https://virtserver.swaggerhub.com/lanzafame/ipfs-pinning-service/v0.0.1
+  description: SwaggerHub API Auto Mocking
+security:
+- tokenAuth: []
 paths:
   /pins:
     get:
-      summary: Get all pins
       tags:
-        - pins
+      - pins
+      summary: Get all pins
       description: Get all the pins for the current user.
       responses:
-        '200':
+        200:
           description: OK
           content:
             application/json:
@@ -22,101 +35,205 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/PinStatus'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
+        400:
+          description: Bad Request (400)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        500:
+          description: Internal Server Error (500)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     post:
-      summary: Add an array of pins
       tags:
-        - pins
+      - pins
+      summary: Add an array of pins
       description: Add an array of pins for the current user.
       requestBody:
-        required: true
         content:
           application/json:
             schema:
               type: array
               items:
                 $ref: '#/components/schemas/Pin'
+        required: true
       responses:
-        '202':
+        202:
           description: Accepted
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '409':
-          $ref: '#/components/responses/InsufficientFunds'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-
+        400:
+          description: Bad Request (400)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        401:
+          description: Unauthorized (401)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: The specified resource was not found (404)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        409:
+          description: Insufficient Funds (409)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        500:
+          description: Internal Server Error (500)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /pins/{cid}:
-    parameters:
+    get:
+      tags:
+      - pins
+      summary: Get status of a Pin
+      description: Get status of a Pin
+      parameters:
       - name: cid
         in: path
         required: true
+        style: simple
+        explode: false
         schema:
           type: string
-    get:
-      summary: Get status of a Pin
-      tags:
-        - pins
-      description: Get status of a Pin
       responses:
-        '200':
+        200:
           description: OK
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/PinStatus'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-          
+        400:
+          description: Bad Request (400)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: The specified resource was not found (404)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        500:
+          description: Internal Server Error (500)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     post:
-      parameters:
-        - $ref: '#/components/parameters/pinReplicationParam'
-        - $ref: '#/components/parameters/pinMetaParam'
+      tags:
+      - pins
       summary: Add a new Pin
-      tags:
-        - pins
-      description: If the parameters are valid, the server will return an 'Accepted' response. T
+      description: If the parameters are valid, the server will return an 'Accepted'
+        response. T
+      parameters:
+      - name: cid
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: replication
+        in: query
+        required: false
+        style: form
+        explode: true
+        schema:
+          $ref: '#/components/schemas/ReplicationFactor'
+      - name: meta
+        in: query
+        description: Associate metadata strings with a Pin.
+        required: false
+        style: form
+        explode: true
+        schema:
+          $ref: '#/components/schemas/Metadata'
       responses:
-        '202':
+        202:
           description: Accepted
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '409':
-          $ref: '#/components/responses/InsufficientFunds'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
+        400:
+          description: Bad Request (400)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        401:
+          description: Unauthorized (401)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: The specified resource was not found (404)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        409:
+          description: Insufficient Funds (409)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        500:
+          description: Internal Server Error (500)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     delete:
-      summary: Remove a Pin
       tags:
-        - pins
+      - pins
+      summary: Remove a Pin
       description: Remove a Pin
+      parameters:
+      - name: cid
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
-        '202':
+        202:
           description: Accepted
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-                
+        400:
+          description: Bad Request (400)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        401:
+          description: Unauthorized (401)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: The specified resource was not found (404)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        500:
+          description: Internal Server Error (500)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     Error:
@@ -126,22 +243,18 @@ components:
           type: integer
         message:
           type: string
-          
     Cid:
       type: object
       properties:
         /:
           type: string
-          
     Metadata:
       type: object
       additionalProperties:
         type: string
-        
     ReplicationFactor:
-      type: integer
       minimum: -1
-
+      type: integer
     PinStatus:
       type: object
       properties:
@@ -157,7 +270,6 @@ components:
           type: string
         timestamp:
           type: string
-
     Pin:
       type: object
       properties:
@@ -167,21 +279,6 @@ components:
           $ref: '#/components/schemas/Metadata'
         replication:
           $ref: '#/components/schemas/ReplicationFactor'
-  
-  parameters:
-    pinReplicationParam:
-      name: replication
-      in: query
-      schema:
-        $ref: '#/components/schemas/ReplicationFactor'
-        
-    pinMetaParam:
-      name: meta
-      description: Associate metadata strings with a Pin. 
-      in: query
-      schema:
-        $ref: '#/components/schemas/Metadata'
-    
   responses:
     BadRequest:
       description: Bad Request (400)
@@ -189,43 +286,50 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
-
     Unauthorized:
       description: Unauthorized (401)
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
-
     NotFound:
       description: The specified resource was not found (404)
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
-
     InsufficientFunds:
       description: Insufficient Funds (409)
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
-            
     InternalServerError:
       description: Internal Server Error (500)
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
-            
+  parameters:
+    pinReplicationParam:
+      name: replication
+      in: query
+      required: false
+      style: form
+      explode: true
+      schema:
+        $ref: '#/components/schemas/ReplicationFactor'
+    pinMetaParam:
+      name: meta
+      in: query
+      description: Associate metadata strings with a Pin.
+      required: false
+      style: form
+      explode: true
+      schema:
+        $ref: '#/components/schemas/Metadata'
   securitySchemes:
     tokenAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
-      # The JWT MUST contain a `user_id` claim that represents the user's identity within
-      # the backend system, so as to associate the user with their pins. This allows the 
-      # backend system to use the identity as a form of reference counting on pins, 
-      # therefore only removing pins once no more users have it pinned.
-security:
-  - tokenAuth: []
